# zoom-g9.2tt-platform

./: .gitignore  README.md
.bmad/: presentation-storyboard-2026-03-03.md  story-2026-03-03.md
.bmad/brainstorming/: brainstorming-session-2026-01-26.md
.bmad/implementation-artifacts/: 1-1-initialize-vite-project-with-react-and-typescript.md  1-2-configure-tailwind-css.md  1-3-setup-firebase-configuration.md  1-4-create-project-structure-and-routing.md  2-1-create-device-context-and-connection-state-machine.md  2-2-implement-web-midi-service.md  2-3-build-splash-screen-with-connection-flow.md  2-4-implement-demo-mode-data-source.md  2-5-add-error-handling-and-troubleshooting-ui.md  2-6-implement-device-identification-and-g9tt-detection.md  3-1-create-patch-context-and-data-types.md  3-2-implement-patch-reading-from-device.md  3-3-build-patch-list-ui.md  3-4-display-selected-patch-info.md  4-1-build-pedalboard-module-grid.md  sprint-status.yaml  (+14 more)
.claude-orka/: .tmux.orka.conf  state.json
meetup-presentation/: PITCH.md  diagrams.js  engine.js  index.html  styles.css
phases/02-python-library/: CHECKSUM.md  README.md  pyproject.toml  setup.py  test_connection.py
phases/02-python-library/examples/: bulk_roundtrip.py  bulk_transfer.py  read_patch.py  realtime_control.py  test_live_mode.py  test_write_modified.py  write_patch.py
phases/02-python-library/zoomg9/: __init__.py  constants.py  device.py  effects.py  encoding.py  patch.py  protocol.py
phases/02-python-library/zoomg9.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/: capture_bidirectional.py  capture_bulk_load.sh  capture_session.py  effect_id_mapper.py  effect_id_mapper_v2.py  g9tt_decoder.py  g9tt_patch_tool.py  g9tt_preview.py  g9tt_writer.py  generate_parameter_maps.py  identity_request.py  midi_monitor.py  midi_proxy.py  raspberry_midi_capture.py  requirements.txt  sysex_analyzer.py  test_realtime.py
zoom-g9.2tt-web/: .env.example  .firebaserc  README.es.md  README.md  database.rules.json  firestore.rules  index.html  package-lock.json  package.json  tsconfig.app.json
(+380 files in other folders)
