[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zoomg9"
version = "0.1.0"
description = "Python library for Zoom G9.2tt MIDI communication"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Andres Mantilla"}
]
keywords = ["midi", "zoom", "g9.2tt", "guitar", "effects", "sysex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "mido>=1.2.0",
    "python-rtmidi>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/amantilla/zoom-g9.2tt-platform"
Documentation = "https://github.com/amantilla/zoom-g9.2tt-platform/tree/main/phases/02-python-library"
Repository = "https://github.com/amantilla/zoom-g9.2tt-platform"
Issues = "https://github.com/amantilla/zoom-g9.2tt-platform/issues"

[project.scripts]
zoomg9 = "zoomg9.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["zoomg9*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=zoomg9 --cov-report=term-missing"
